<resources>
    <string name="app_name">Shipe</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_shipper">shipper</string>
    <string name="shop">Shop</string>
    <string name="shipper">Shipper</string>
    <string name="customer">Customer</string>
    <string name="image_description">This is an image</string>
    <!-- Shipper -->
    <string name="tab_home">Home</string>
    <string name="tab_task">Task</string>
    <string name="tab_order">Order</string>
    <string name="tab_map">Map</string>
    <string name="accept">Accept</string>
    <string name="bill_id">Bill ID</string>
    <string name="no_task_found">No Tasks Found</string>
    <string name="no_order_found">No Orders Found</string>
    <string name="task_getting_msg">Getting</string>
    <string name="task_on_going_msg">On Going</string>
    <string name="task_complete_msg">Complete</string>
    <string name="bill_not_delivered">Not delivered yet</string>
    <string name="id">ID</string>
    <string name="address_no_colon">Address</string>

    <!-- Manager -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shiper_manager">Shipper Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shipper_management">Shipper Management</string>
    <string name="menu_customer_management">Customer Management</string>
    <string name="menu_bill_management">Bill Management</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_shop_information">Shop Information</string>
    <string name="menu_product_management">Product Management</string>
    <string name="shipper_type">Shipper Type: </string>
    <string name="shipper_name">Shipper Name</string>
    <string name="shipper_plate_number">Plate number</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="unconfirmed">Not Confirmed</string>
    <string name="avatar">Avatar</string>
    <string name="close">Close</string>
    <string name="birthdate">Birth Date: </string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="plate">Plate license: </string>
    <string name="status">Status:</string>
    <string name="customer_spent">Spent amount</string>
    <string name="back">Back</string>
    <string name="open_time">Open: </string>
    <string name="close_time">Close: </string>
    <string name="bill_type">Bill Type: </string>
    <string name="customer_name">Customer Name</string>
    <string name="bill_price">Bill Price</string>
    <string name="N">New</string>
    <string name="G">Getting</string>
    <string name="O">On-Going</string>
    <string name="C">Completed</string>
    <string name="Customer">Customer:</string>
    <string name="Shipper">Shipper:</string>
    <string name="description">Description:</string>
    <string name="created">Created Date:</string>
    <string name="delivery">Delivery Date:</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>

    <string name="update_item">Update</string>
    <string name="item_name">Name</string>
    <string name="item_price">Price</string>
    <string name="item_amount">Amount</string>
    <string name="item_total_price">Total Price</string>
    <string name="list_Bill_Detail">List Bill Detail</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="time_format">HH:mm</string>

    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="total_price">Total Price</string>

    <!-- Customer -->
    <string name="btn_buy">Buy</string>
    <string name="salary">Salary bill</string>
    <string name="setting">Setting</string>
    <string name="signout">Sign Out</string>
    <string name="home">Home</string>
    <string name="caterory">Category</string>
    <string name="history">History</string>
    <string name="account">Account</string>
</resources>
