<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipper_management"
            android:icon="@drawable/motorbike"
            android:title="@string/menu_shipper_management" />
        <item
            android:id="@+id/nav_customer_management"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_customer_management" />
        <item
            android:id="@+id/nav_bill_management"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bill_management" />
        <item
            android:id="@+id/nav_product_management"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_product_management" />
    </group>

    <item android:title="Shop">
        <menu>
            <item
                android:id="@+id/nav_shop_information"
                android:icon="@drawable/ic_menu_cart"
                android:title="@string/menu_shop_information" />
        </menu>
    </item>

</menu>
