<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/lightBlue">

    <TextView
        android:id="@+id/shipper_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipper_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_avatar" />

    <ImageView
        android:id="@+id/shipper_info_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/close"/>

    <ImageView
        android:id="@+id/shipper_info_avatar"
        android:layout_width="212dp"
        android:layout_height="201dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_avatar"
        android:contentDescription="@string/avatar"/>

    <TableLayout
        android:layout_width="202dp"
        android:layout_height="138dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_address">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_birthdate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthdate" />

            <TextView
                android:id="@+id/shipper_info_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthdate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/shipper_info_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_license_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate" />

            <TextView
                android:id="@+id/shipper_info_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/shipper_info_status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/shipper_info_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_name" />

</androidx.constraintlayout.widget.ConstraintLayout>