<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hcmus.Fragments.ShipperHomeFragment">

    <!-- TODO: Update blank fragment layout -->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="Home" />-->
    <TextView
        android:id="@+id/shipper_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        android:text="@string/shipper_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_avatar" />


    <ImageView
        android:id="@+id/shipper_info_avatar"
        android:layout_width="212dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_marginTop="-210dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_avatar" />

    <TableLayout
        android:layout_width="202dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_address">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_birthdate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthdate" />

            <TextView
                android:id="@+id/shipper_info_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birthdate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/shipper_info_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_license_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate" />

            <TextView
                android:id="@+id/shipper_info_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Default" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shipper_info_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/shipper_info_status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Active" />


        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/shipper_info_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-80dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_name" />


    <TableLayout
        android:layout_width="336dp"
        android:layout_height="138dp"
        android:layout_marginTop="450dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipper_info_address">



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/signout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/signout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signout" />

            <TextView
                android:id="@+id/txtShipperSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/signout"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>
</FrameLayout>